// See Makefile for the logic that generates this
// Protoc errors imply this file is being generated incorrectly
// Swift compile errors are probably bugs in protoc-gen-swift
syntax = "proto3";
package protobuf_unittest_generated;
enum GeneratedSwiftReservedEnum {
  NONE = 0;
  adjusted = 1;
  aggregateValue = 2;
  allCases = 3;
  allowAlias = 4;
  alwaysPrintEnumsAsInts = 5;
  annotation = 6;
  any = 7;
  AnyExtensionField = 8;
  AnyMessageExtension = 9;
  AnyMessageStorage = 10;
  AnyUnpackError = 11;
  Api = 12;
  appended = 13;
  appendUIntHex = 14;
  appendUnknown = 15;
  areAllInitialized = 16;
  array = 17;
  arrayDepth = 18;
  arrayLiteral = 19;
  arraySeparator = 20;
  as = 21;
  asciiOpenCurlyBracket = 22;
  asciiZero = 23;
  available = 24;
  b = 25;
  base64Values = 26;
  baseAddress = 27;
  BaseType = 28;
  begin = 29;
  binary = 30;
  BinaryDecoder = 31;
  BinaryDecodingError = 32;
  BinaryDecodingOptions = 33;
  BinaryDelimited = 34;
  BinaryEncoder = 35;
  BinaryEncodingError = 36;
  BinaryEncodingMessageSetSizeVisitor = 37;
  BinaryEncodingMessageSetVisitor = 38;
  BinaryEncodingOptions = 39;
  BinaryEncodingSizeVisitor = 40;
  BinaryEncodingVisitor = 41;
  binaryOptions = 42;
  body = 43;
  Bool = 44;
  booleanLiteral = 45;
  BooleanLiteralType = 46;
  boolValue = 47;
  bytes = 48;
  bytesInGroup = 49;
  bytesNeeded = 50;
  bytesRead = 51;
  BytesValue = 52;
  c = 53;
  capitalizeNext = 54;
  cardinality = 55;
  ccEnableArenas = 56;
  ccGenericServices = 57;
  Character = 58;
  chars = 59;
  chunk = 60;
  class = 61;
  clearAggregateValue = 62;
  clearAllowAlias = 63;
  clearBegin = 64;
  clearCcEnableArenas = 65;
  clearCcGenericServices = 66;
  clearClientStreaming = 67;
  clearCsharpNamespace = 68;
  clearCtype = 69;
  clearDebugRedact = 70;
  clearDefaultValue = 71;
  clearDeprecated = 72;
  clearDeprecatedLegacyJsonFieldConflicts = 73;
  clearDoubleValue = 74;
  clearEdition = 75;
  clearEditionEnum = 76;
  clearEnd = 77;
  clearEnumType = 78;
  clearExtendee = 79;
  clearExtensionValue = 80;
  clearFeatures = 81;
  clearFieldPresence = 82;
  clearFullName = 83;
  clearGoPackage = 84;
  clearIdempotencyLevel = 85;
  clearIdentifierValue = 86;
  clearInputType = 87;
  clearIsExtension = 88;
  clearJavaGenerateEqualsAndHash = 89;
  clearJavaGenericServices = 90;
  clearJavaMultipleFiles = 91;
  clearJavaOuterClassname = 92;
  clearJavaPackage = 93;
  clearJavaStringCheckUtf8 = 94;
  clearJsonFormat = 95;
  clearJsonName = 96;
  clearJstype = 97;
  clearLabel = 98;
  clearLazy = 99;
  clearLeadingComments = 100;
  clearMapEntry = 101;
  clearMaximumEdition = 102;
  clearMaximumEditionEnum = 103;
  clearMessageEncoding = 104;
  clearMessageSetWireFormat = 105;
  clearMinimumEdition = 106;
  clearMinimumEditionEnum = 107;
  clearName = 108;
  clearNamePart = 109;
  clearNegativeIntValue = 110;
  clearNoStandardDescriptorAccessor = 111;
  clearNumber = 112;
  clearObjcClassPrefix = 113;
  clearOneofIndex = 114;
  clearOptimizeFor = 115;
  clearOptions = 116;
  clearOutputType = 117;
  clearPackage = 118;
  clearPacked = 119;
  clearPhpClassPrefix = 120;
  clearPhpGenericServices = 121;
  clearPhpMetadataNamespace = 122;
  clearPhpNamespace = 123;
  clearPositiveIntValue = 124;
  clearProto3Optional = 125;
  clearPyGenericServices = 126;
  clearRepeated = 127;
  clearRepeatedFieldEncoding = 128;
  clearReserved = 129;
  clearRetention = 130;
  clearRubyPackage = 131;
  clearSemantic = 132;
  clearServerStreaming = 133;
  clearSourceCodeInfo = 134;
  clearSourceContext = 135;
  clearSourceFile = 136;
  clearStart = 137;
  clearStringValue = 138;
  clearSwiftPrefix = 139;
  clearSyntax = 140;
  clearTrailingComments = 141;
  clearType = 142;
  clearTypeName = 143;
  clearUnverifiedLazy = 144;
  clearValue = 145;
  clearVerification = 146;
  clearWeak = 147;
  clientStreaming = 148;
  codePoint = 149;
  codeUnits = 150;
  Collection = 151;
  com = 152;
  comma = 153;
  contentsOf = 154;
  ContiguousBytes = 155;
  count = 156;
  countVarintsInBuffer = 157;
  csharpNamespace = 158;
  ctype = 159;
  customCodable = 160;
  CustomDebugStringConvertible = 161;
  d = 162;
  Data = 163;
  dataResult = 164;
  date = 165;
  daySec = 166;
  daysSinceEpoch = 167;
  debugDescription = 168;
  debugRedact = 169;
  declaration = 170;
  decoded = 171;
  decodedFromJSONNull = 172;
  decodeExtensionField = 173;
  decodeExtensionFieldsAsMessageSet = 174;
  decodeJSON = 175;
  decodeMapField = 176;
  decodeMessage = 177;
  decoder = 178;
  decodeRepeated = 179;
  decodeRepeatedBoolField = 180;
  decodeRepeatedBytesField = 181;
  decodeRepeatedDoubleField = 182;
  decodeRepeatedEnumField = 183;
  decodeRepeatedFixed32Field = 184;
  decodeRepeatedFixed64Field = 185;
  decodeRepeatedFloatField = 186;
  decodeRepeatedGroupField = 187;
  decodeRepeatedInt32Field = 188;
  decodeRepeatedInt64Field = 189;
  decodeRepeatedMessageField = 190;
  decodeRepeatedSFixed32Field = 191;
  decodeRepeatedSFixed64Field = 192;
  decodeRepeatedSInt32Field = 193;
  decodeRepeatedSInt64Field = 194;
  decodeRepeatedStringField = 195;
  decodeRepeatedUInt32Field = 196;
  decodeRepeatedUInt64Field = 197;
  decodeSingular = 198;
  decodeSingularBoolField = 199;
  decodeSingularBytesField = 200;
  decodeSingularDoubleField = 201;
  decodeSingularEnumField = 202;
  decodeSingularFixed32Field = 203;
  decodeSingularFixed64Field = 204;
  decodeSingularFloatField = 205;
  decodeSingularGroupField = 206;
  decodeSingularInt32Field = 207;
  decodeSingularInt64Field = 208;
  decodeSingularMessageField = 209;
  decodeSingularSFixed32Field = 210;
  decodeSingularSFixed64Field = 211;
  decodeSingularSInt32Field = 212;
  decodeSingularSInt64Field = 213;
  decodeSingularStringField = 214;
  decodeSingularUInt32Field = 215;
  decodeSingularUInt64Field = 216;
  decodeTextFormat = 217;
  defaultAnyTypeURLPrefix = 218;
  defaults = 219;
  defaultValue = 220;
  dependency = 221;
  deprecated = 222;
  deprecatedLegacyJsonFieldConflicts = 223;
  description = 224;
  DescriptorProto = 225;
  Dictionary = 226;
  dictionaryLiteral = 227;
  digit = 228;
  digit0 = 229;
  digit1 = 230;
  digitCount = 231;
  digits = 232;
  digitValue = 233;
  discardableResult = 234;
  discardUnknownFields = 235;
  distance = 236;
  double = 237;
  doubleValue = 238;
  Duration = 239;
  E = 240;
  edition = 241;
  EditionDefault = 242;
  editionDefaults = 243;
  editionEnum = 244;
  Element = 245;
  elements = 246;
  emitExtensionFieldName = 247;
  emitFieldName = 248;
  emitFieldNumber = 249;
  Empty = 250;
  emptyData = 251;
  encodeAsBytes = 252;
  encoded = 253;
  encodedJSONString = 254;
  encodedSize = 255;
  encodeField = 256;
  encoder = 257;
  end = 258;
  endArray = 259;
  endMessageField = 260;
  endObject = 261;
  endRegularField = 262;
  enum = 263;
  EnumDescriptorProto = 264;
  EnumOptions = 265;
  EnumReservedRange = 266;
  enumType = 267;
  enumvalue = 268;
  EnumValueDescriptorProto = 269;
  EnumValueOptions = 270;
  Equatable = 271;
  Error = 272;
  ExpressibleByArrayLiteral = 273;
  ExpressibleByDictionaryLiteral = 274;
  ext = 275;
  extDecoder = 276;
  extendedGraphemeClusterLiteral = 277;
  ExtendedGraphemeClusterLiteralType = 278;
  extendee = 279;
  ExtensibleMessage = 280;
  extension = 281;
  ExtensionField = 282;
  extensionFieldNumber = 283;
  ExtensionFieldValueSet = 284;
  ExtensionMap = 285;
  extensionRange = 286;
  ExtensionRangeOptions = 287;
  extensions = 288;
  extras = 289;
  F = 290;
  false = 291;
  features = 292;
  FeatureSet = 293;
  FeatureSetDefaults = 294;
  FeatureSetEditionDefault = 295;
  field = 296;
  fieldData = 297;
  FieldDescriptorProto = 298;
  FieldMask = 299;
  fieldName = 300;
  fieldNameCount = 301;
  fieldNum = 302;
  fieldNumber = 303;
  fieldNumberForProto = 304;
  FieldOptions = 305;
  fieldPresence = 306;
  fields = 307;
  fieldSize = 308;
  FieldTag = 309;
  fieldType = 310;
  file = 311;
  FileDescriptorProto = 312;
  FileDescriptorSet = 313;
  fileName = 314;
  FileOptions = 315;
  filter = 316;
  first = 317;
  firstItem = 318;
  float = 319;
  floatLiteral = 320;
  FloatLiteralType = 321;
  FloatValue = 322;
  forMessageName = 323;
  formUnion = 324;
  forReadingFrom = 325;
  forTypeURL = 326;
  ForwardParser = 327;
  forWritingInto = 328;
  from = 329;
  fromAscii2 = 330;
  fromAscii4 = 331;
  fromByteOffset = 332;
  fromHexDigit = 333;
  fullName = 334;
  func = 335;
  G = 336;
  GeneratedCodeInfo = 337;
  get = 338;
  getExtensionValue = 339;
  googleapis = 340;
  Google_Protobuf_Any = 341;
  Google_Protobuf_Api = 342;
  Google_Protobuf_BoolValue = 343;
  Google_Protobuf_BytesValue = 344;
  Google_Protobuf_DescriptorProto = 345;
  Google_Protobuf_DoubleValue = 346;
  Google_Protobuf_Duration = 347;
  Google_Protobuf_Edition = 348;
  Google_Protobuf_Empty = 349;
  Google_Protobuf_Enum = 350;
  Google_Protobuf_EnumDescriptorProto = 351;
  Google_Protobuf_EnumOptions = 352;
  Google_Protobuf_EnumValue = 353;
  Google_Protobuf_EnumValueDescriptorProto = 354;
  Google_Protobuf_EnumValueOptions = 355;
  Google_Protobuf_ExtensionRangeOptions = 356;
  Google_Protobuf_FeatureSet = 357;
  Google_Protobuf_FeatureSetDefaults = 358;
  Google_Protobuf_Field = 359;
  Google_Protobuf_FieldDescriptorProto = 360;
  Google_Protobuf_FieldMask = 361;
  Google_Protobuf_FieldOptions = 362;
  Google_Protobuf_FileDescriptorProto = 363;
  Google_Protobuf_FileDescriptorSet = 364;
  Google_Protobuf_FileOptions = 365;
  Google_Protobuf_FloatValue = 366;
  Google_Protobuf_GeneratedCodeInfo = 367;
  Google_Protobuf_Int32Value = 368;
  Google_Protobuf_Int64Value = 369;
  Google_Protobuf_ListValue = 370;
  Google_Protobuf_MessageOptions = 371;
  Google_Protobuf_Method = 372;
  Google_Protobuf_MethodDescriptorProto = 373;
  Google_Protobuf_MethodOptions = 374;
  Google_Protobuf_Mixin = 375;
  Google_Protobuf_NullValue = 376;
  Google_Protobuf_OneofDescriptorProto = 377;
  Google_Protobuf_OneofOptions = 378;
  Google_Protobuf_Option = 379;
  Google_Protobuf_ServiceDescriptorProto = 380;
  Google_Protobuf_ServiceOptions = 381;
  Google_Protobuf_SourceCodeInfo = 382;
  Google_Protobuf_SourceContext = 383;
  Google_Protobuf_StringValue = 384;
  Google_Protobuf_Struct = 385;
  Google_Protobuf_Syntax = 386;
  Google_Protobuf_Timestamp = 387;
  Google_Protobuf_Type = 388;
  Google_Protobuf_UInt32Value = 389;
  Google_Protobuf_UInt64Value = 390;
  Google_Protobuf_UninterpretedOption = 391;
  Google_Protobuf_Value = 392;
  goPackage = 393;
  group = 394;
  groupFieldNumberStack = 395;
  groupSize = 396;
  h = 397;
  hadOneofValue = 398;
  handleConflictingOneOf = 399;
  hasAggregateValue = 400;
  hasAllowAlias = 401;
  hasBegin = 402;
  hasCcEnableArenas = 403;
  hasCcGenericServices = 404;
  hasClientStreaming = 405;
  hasCsharpNamespace = 406;
  hasCtype = 407;
  hasDebugRedact = 408;
  hasDefaultValue = 409;
  hasDeprecated = 410;
  hasDeprecatedLegacyJsonFieldConflicts = 411;
  hasDoubleValue = 412;
  hasEdition = 413;
  hasEditionEnum = 414;
  hasEnd = 415;
  hasEnumType = 416;
  hasExtendee = 417;
  hasExtensionValue = 418;
  hasFeatures = 419;
  hasFieldPresence = 420;
  hasFullName = 421;
  hasGoPackage = 422;
  hash = 423;
  Hashable = 424;
  hasher = 425;
  hashValue = 426;
  HashVisitor = 427;
  hasIdempotencyLevel = 428;
  hasIdentifierValue = 429;
  hasInputType = 430;
  hasIsExtension = 431;
  hasJavaGenerateEqualsAndHash = 432;
  hasJavaGenericServices = 433;
  hasJavaMultipleFiles = 434;
  hasJavaOuterClassname = 435;
  hasJavaPackage = 436;
  hasJavaStringCheckUtf8 = 437;
  hasJsonFormat = 438;
  hasJsonName = 439;
  hasJstype = 440;
  hasLabel = 441;
  hasLazy = 442;
  hasLeadingComments = 443;
  hasMapEntry = 444;
  hasMaximumEdition = 445;
  hasMaximumEditionEnum = 446;
  hasMessageEncoding = 447;
  hasMessageSetWireFormat = 448;
  hasMinimumEdition = 449;
  hasMinimumEditionEnum = 450;
  hasName = 451;
  hasNamePart = 452;
  hasNegativeIntValue = 453;
  hasNoStandardDescriptorAccessor = 454;
  hasNumber = 455;
  hasObjcClassPrefix = 456;
  hasOneofIndex = 457;
  hasOptimizeFor = 458;
  hasOptions = 459;
  hasOutputType = 460;
  hasPackage = 461;
  hasPacked = 462;
  hasPhpClassPrefix = 463;
  hasPhpGenericServices = 464;
  hasPhpMetadataNamespace = 465;
  hasPhpNamespace = 466;
  hasPositiveIntValue = 467;
  hasProto3Optional = 468;
  hasPyGenericServices = 469;
  hasRepeated = 470;
  hasRepeatedFieldEncoding = 471;
  hasReserved = 472;
  hasRetention = 473;
  hasRubyPackage = 474;
  hasSemantic = 475;
  hasServerStreaming = 476;
  hasSourceCodeInfo = 477;
  hasSourceContext = 478;
  hasSourceFile = 479;
  hasStart = 480;
  hasStringValue = 481;
  hasSwiftPrefix = 482;
  hasSyntax = 483;
  hasTrailingComments = 484;
  hasType = 485;
  hasTypeName = 486;
  hasUnverifiedLazy = 487;
  hasValue = 488;
  hasVerification = 489;
  hasWeak = 490;
  hour = 491;
  i = 492;
  idempotencyLevel = 493;
  identifierValue = 494;
  if = 495;
  ignoreUnknownFields = 496;
  index = 497;
  init = 498;
  inout = 499;
  inputType = 500;
  insert = 501;
  Int = 502;
  Int32 = 503;
  Int32Value = 504;
  Int64 = 505;
  Int64Value = 506;
  Int8 = 507;
  integerLiteral = 508;
  IntegerLiteralType = 509;
  intern = 510;
  Internal = 511;
  InternalState = 512;
  InternalSwiftProtobuf = 513;
  into = 514;
  ints = 515;
  isA = 516;
  isEqual = 517;
  isEqualTo = 518;
  isExtension = 519;
  isInitialized = 520;
  isNegative = 521;
  itemTagsEncodedSize = 522;
  Iterator = 523;
  i_2166136261 = 524;
  javaGenerateEqualsAndHash = 525;
  javaGenericServices = 526;
  javaMultipleFiles = 527;
  javaOuterClassname = 528;
  javaPackage = 529;
  javaStringCheckUtf8 = 530;
  JSONDecoder = 531;
  JSONDecodingError = 532;
  JSONDecodingOptions = 533;
  jsonEncoder = 534;
  JSONEncodingError = 535;
  JSONEncodingOptions = 536;
  JSONEncodingVisitor = 537;
  jsonFormat = 538;
  JSONMapEncodingVisitor = 539;
  jsonName = 540;
  jsonPath = 541;
  jsonPaths = 542;
  JSONScanner = 543;
  jsonString = 544;
  jsonText = 545;
  jsonUTF8Data = 546;
  jstype = 547;
  k = 548;
  kChunkSize = 549;
  Key = 550;
  keyField = 551;
  keyFieldOpt = 552;
  KeyType = 553;
  kind = 554;
  l = 555;
  label = 556;
  lazy = 557;
  leadingComments = 558;
  leadingDetachedComments = 559;
  length = 560;
  lessThan = 561;
  let = 562;
  lhs = 563;
  list = 564;
  listOfMessages = 565;
  listValue = 566;
  littleEndian = 567;
  littleEndianBytes = 568;
  load = 569;
  localHasher = 570;
  location = 571;
  M = 572;
  major = 573;
  makeIterator = 574;
  mapEntry = 575;
  mapHash = 576;
  MapKeyType = 577;
  mapNameResolver = 578;
  mapToMessages = 579;
  MapValueType = 580;
  mapVisitor = 581;
  maximumEdition = 582;
  maximumEditionEnum = 583;
  mdayStart = 584;
  merge = 585;
  message = 586;
  messageDepthLimit = 587;
  messageEncoding = 588;
  MessageExtension = 589;
  MessageImplementationBase = 590;
  MessageOptions = 591;
  MessageSet = 592;
  messageSetWireFormat = 593;
  messageType = 594;
  Method = 595;
  MethodDescriptorProto = 596;
  MethodOptions = 597;
  methods = 598;
  min = 599;
  minimumEdition = 600;
  minimumEditionEnum = 601;
  minor = 602;
  Mixin = 603;
  mixins = 604;
  modifier = 605;
  modify = 606;
  month = 607;
  msgExtension = 608;
  mutating = 609;
  n = 610;
  name = 611;
  NameDescription = 612;
  NameMap = 613;
  NamePart = 614;
  nameResolver = 615;
  names = 616;
  nanos = 617;
  nativeBytes = 618;
  nativeEndianBytes = 619;
  negativeIntValue = 620;
  nestedType = 621;
  newL = 622;
  newList = 623;
  newValue = 624;
  nextByte = 625;
  nextFieldNumber = 626;
  nil = 627;
  nilLiteral = 628;
  noStandardDescriptorAccessor = 629;
  nullValue = 630;
  number = 631;
  numberValue = 632;
  objcClassPrefix = 633;
  of = 634;
  oneofDecl = 635;
  OneofDescriptorProto = 636;
  oneofIndex = 637;
  OneofOptions = 638;
  oneofs = 639;
  OneOf_Kind = 640;
  optimizeFor = 641;
  OptimizeMode = 642;
  Option = 643;
  OptionalEnumExtensionField = 644;
  OptionalExtensionField = 645;
  OptionalGroupExtensionField = 646;
  OptionalMessageExtensionField = 647;
  OptionRetention = 648;
  options = 649;
  OptionTargetType = 650;
  other = 651;
  others = 652;
  out = 653;
  outputType = 654;
  p = 655;
  package = 656;
  packed = 657;
  PackedEnumExtensionField = 658;
  PackedExtensionField = 659;
  padding = 660;
  parent = 661;
  parse = 662;
  partial = 663;
  path = 664;
  paths = 665;
  payload = 666;
  payloadSize = 667;
  phpClassPrefix = 668;
  phpGenericServices = 669;
  phpMetadataNamespace = 670;
  phpNamespace = 671;
  pointer = 672;
  pos = 673;
  positiveIntValue = 674;
  prefix = 675;
  preserveProtoFieldNames = 676;
  preTraverse = 677;
  printUnknownFields = 678;
  proto2 = 679;
  proto3DefaultValue = 680;
  proto3Optional = 681;
  ProtobufAPIVersionCheck = 682;
  ProtobufAPIVersion_2 = 683;
  ProtobufBool = 684;
  ProtobufBytes = 685;
  ProtobufDouble = 686;
  ProtobufEnumMap = 687;
  protobufExtension = 688;
  ProtobufFixed32 = 689;
  ProtobufFixed64 = 690;
  ProtobufFloat = 691;
  ProtobufInt32 = 692;
  ProtobufInt64 = 693;
  ProtobufMap = 694;
  ProtobufMessageMap = 695;
  ProtobufSFixed32 = 696;
  ProtobufSFixed64 = 697;
  ProtobufSInt32 = 698;
  ProtobufSInt64 = 699;
  ProtobufString = 700;
  ProtobufUInt32 = 701;
  ProtobufUInt64 = 702;
  protobuf_extensionFieldValues = 703;
  protobuf_fieldNumber = 704;
  protobuf_generated_isEqualTo = 705;
  protobuf_nameMap = 706;
  protobuf_newField = 707;
  protobuf_package = 708;
  protocol = 709;
  protoFieldName = 710;
  protoMessageName = 711;
  ProtoNameProviding = 712;
  protoPaths = 713;
  public = 714;
  publicDependency = 715;
  putBoolValue = 716;
  putBytesValue = 717;
  putDoubleValue = 718;
  putEnumValue = 719;
  putFixedUInt32 = 720;
  putFixedUInt64 = 721;
  putFloatValue = 722;
  putInt64 = 723;
  putStringValue = 724;
  putUInt64 = 725;
  putUInt64Hex = 726;
  putVarInt = 727;
  putZigZagVarInt = 728;
  pyGenericServices = 729;
  rawChars = 730;
  RawRepresentable = 731;
  RawValue = 732;
  read4HexDigits = 733;
  register = 734;
  repeated = 735;
  RepeatedEnumExtensionField = 736;
  RepeatedExtensionField = 737;
  repeatedFieldEncoding = 738;
  RepeatedGroupExtensionField = 739;
  RepeatedMessageExtensionField = 740;
  repeating = 741;
  requestStreaming = 742;
  requestTypeURL = 743;
  requiredSize = 744;
  responseStreaming = 745;
  responseTypeURL = 746;
  result = 747;
  retention = 748;
  rethrows = 749;
  return = 750;
  ReturnType = 751;
  revision = 752;
  rhs = 753;
  root = 754;
  rubyPackage = 755;
  s = 756;
  sawBackslash = 757;
  sawSection4Characters = 758;
  sawSection5Characters = 759;
  scanner = 760;
  seconds = 761;
  self = 762;
  semantic = 763;
  separator = 764;
  serialize = 765;
  serializedData = 766;
  serializedSize = 767;
  serverStreaming = 768;
  service = 769;
  ServiceDescriptorProto = 770;
  ServiceOptions = 771;
  set = 772;
  setExtensionValue = 773;
  shift = 774;
  SimpleExtensionMap = 775;
  sizer = 776;
  source = 777;
  sourceCodeInfo = 778;
  sourceContext = 779;
  sourceEncoding = 780;
  sourceFile = 781;
  span = 782;
  split = 783;
  start = 784;
  startArray = 785;
  startArrayObject = 786;
  startField = 787;
  startIndex = 788;
  startMessageField = 789;
  startObject = 790;
  startRegularField = 791;
  state = 792;
  static = 793;
  StaticString = 794;
  storage = 795;
  String = 796;
  stringLiteral = 797;
  StringLiteralType = 798;
  stringResult = 799;
  stringValue = 800;
  struct = 801;
  structValue = 802;
  subDecoder = 803;
  subscript = 804;
  subVisitor = 805;
  Swift = 806;
  swiftPrefix = 807;
  syntax = 808;
  T = 809;
  tag = 810;
  targets = 811;
  terminator = 812;
  testDecoder = 813;
  text = 814;
  textDecoder = 815;
  TextFormatDecoder = 816;
  TextFormatDecodingError = 817;
  TextFormatDecodingOptions = 818;
  TextFormatEncodingOptions = 819;
  TextFormatEncodingVisitor = 820;
  textFormatString = 821;
  throwOrIgnore = 822;
  throws = 823;
  timeInterval = 824;
  timeIntervalSince1970 = 825;
  timeIntervalSinceReferenceDate = 826;
  Timestamp = 827;
  total = 828;
  totalArrayDepth = 829;
  totalSize = 830;
  trailingComments = 831;
  traverse = 832;
  true = 833;
  try = 834;
  type = 835;
  typealias = 836;
  TypeEnum = 837;
  typeName = 838;
  typePrefix = 839;
  typeStart = 840;
  typeUnknown = 841;
  typeURL = 842;
  UInt32 = 843;
  UInt32Value = 844;
  UInt64 = 845;
  UInt64Value = 846;
  UInt8 = 847;
  unicodeScalarLiteral = 848;
  UnicodeScalarLiteralType = 849;
  unicodeScalars = 850;
  UnicodeScalarView = 851;
  uninterpretedOption = 852;
  union = 853;
  uniqueStorage = 854;
  unknown = 855;
  unknownFields = 856;
  UnknownStorage = 857;
  unpackTo = 858;
  UnsafeBufferPointer = 859;
  UnsafeMutablePointer = 860;
  UnsafeMutableRawBufferPointer = 861;
  UnsafeMutableRawPointer = 862;
  UnsafeRawBufferPointer = 863;
  UnsafeRawPointer = 864;
  unverifiedLazy = 865;
  updatedOptions = 866;
  url = 867;
  useDeterministicOrdering = 868;
  utf8 = 869;
  utf8Ptr = 870;
  utf8ToDouble = 871;
  UTF8View = 872;
  v = 873;
  value = 874;
  valueField = 875;
  values = 876;
  ValueType = 877;
  var = 878;
  verification = 879;
  VerificationState = 880;
  Version = 881;
  versionString = 882;
  visitExtensionFields = 883;
  visitExtensionFieldsAsMessageSet = 884;
  visitMapField = 885;
  visitor = 886;
  visitPacked = 887;
  visitPackedBoolField = 888;
  visitPackedDoubleField = 889;
  visitPackedEnumField = 890;
  visitPackedFixed32Field = 891;
  visitPackedFixed64Field = 892;
  visitPackedFloatField = 893;
  visitPackedInt32Field = 894;
  visitPackedInt64Field = 895;
  visitPackedSFixed32Field = 896;
  visitPackedSFixed64Field = 897;
  visitPackedSInt32Field = 898;
  visitPackedSInt64Field = 899;
  visitPackedUInt32Field = 900;
  visitPackedUInt64Field = 901;
  visitRepeated = 902;
  visitRepeatedBoolField = 903;
  visitRepeatedBytesField = 904;
  visitRepeatedDoubleField = 905;
  visitRepeatedEnumField = 906;
  visitRepeatedFixed32Field = 907;
  visitRepeatedFixed64Field = 908;
  visitRepeatedFloatField = 909;
  visitRepeatedGroupField = 910;
  visitRepeatedInt32Field = 911;
  visitRepeatedInt64Field = 912;
  visitRepeatedMessageField = 913;
  visitRepeatedSFixed32Field = 914;
  visitRepeatedSFixed64Field = 915;
  visitRepeatedSInt32Field = 916;
  visitRepeatedSInt64Field = 917;
  visitRepeatedStringField = 918;
  visitRepeatedUInt32Field = 919;
  visitRepeatedUInt64Field = 920;
  visitSingular = 921;
  visitSingularBoolField = 922;
  visitSingularBytesField = 923;
  visitSingularDoubleField = 924;
  visitSingularEnumField = 925;
  visitSingularFixed32Field = 926;
  visitSingularFixed64Field = 927;
  visitSingularFloatField = 928;
  visitSingularGroupField = 929;
  visitSingularInt32Field = 930;
  visitSingularInt64Field = 931;
  visitSingularMessageField = 932;
  visitSingularSFixed32Field = 933;
  visitSingularSFixed64Field = 934;
  visitSingularSInt32Field = 935;
  visitSingularSInt64Field = 936;
  visitSingularStringField = 937;
  visitSingularUInt32Field = 938;
  visitSingularUInt64Field = 939;
  visitUnknown = 940;
  wasDecoded = 941;
  weak = 942;
  weakDependency = 943;
  where = 944;
  wireFormat = 945;
  with = 946;
  withUnsafeBytes = 947;
  withUnsafeMutableBytes = 948;
  work = 949;
  Wrapped = 950;
  WrappedType = 951;
  wrappedValue = 952;
  written = 953;
  yday = 954;
}
